mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2018
+	Adding changes in the copyright section.
+-->
 <head>
 	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
