fb adding some trouble

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--
 	Copyright 2018
 	Adding changes in the copyright section.
-	Other conflicting changes!!!
+	BIG Trouble!!!
 -->
 <head>
 	<title>A Great Website</title>
@@ -24,7 +24,6 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
 	</footer>
 </body>
 </html>
