--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!--
 	Copyright 2018
 	Adding changes in the copyright section.
+	Other conflicting changes!!!
 -->
 <head>
 	<title>A Great Website</title>
@@ -19,6 +20,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			I'm not sure what will go here, but I'm sure it will be nice.
+			Really
 		</p>
 	</main>
 	<footer class="container">
