Adding changes after rebasing conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2018
-	Adding changes in the copyright section.
-	BIG Trouble!!!
 -->
 <head>
-	<title>A Great Website</title>
+	<title>Lots of Trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
