--- a/simple.html
+++ b/simple.html
@@ -22,6 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
+	<p>&copy; 2018 Git Courses, All Rights Reserved.</p>
 	</footer>
 </body>
 </html>
