--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2018
 -->
 <head>
-	<title>Lots of Trouble, in a little repo</title>
+	<title>Updating Title for Webpage</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,8 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			I'm not sure what will go here, but I'm sure it will be nice.
-			Really
+			Adding important text
 		</p>
 	</main>
 	<footer class="container">
